--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@ h1 {
     <h1>Jesika Sivanna Official Store</h1>
     <p>Luxury Collection • Premium Quality</p>
 
-    <img src="https://produk2.jpg.produk3.jpg.produk4.jpg" class="product-img">
-
+    <img src="produk2.jpg" class="product-img">
+     <img src="produk3.jpg" class="product-img"> 
+    <img src="produk4.jpg" class="product-img">
+    
     <a href="https://wa.me/6282383919107" class="btn whatsapp">Order via WhatsApp</a>
 
     <a href="https://skinbeautycar.com/m/login?codeNumber=044550" class="btn shopee">Shop on Shopee</a>
